gameover時、ボタンが消える処理を追加

--- a/www/index.html
+++ b/www/index.html
@@ -104,6 +104,10 @@
           alert(e.message);
           $("#gameover").html("GAME OVER");
         }
+        $("#hidari").css("display", "none");
+        $("#tyokusin").css("display", "none");
+        $("#migi").css("display", "none");
+        $("#newgame").css("display", "block");
       }  
 
       function newgame() {      
